# mcpdone-samples

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  mcp-audit-action-selftest.yml  release.yml
mcp-audit/: .gitignore  README.md  action.yml  pyproject.toml  smoke_test.py
mcp-audit/src/mcp_audit/: __init__.py  cli.py  finding.py
mcp-audit/src/mcp_audit/checks/: __init__.py  command_injection.py  destructive_fs_sink.py  fastmcp_wrapper_layer.py  sql_readonly_keyword_guard.py  starlette_badhost.py  tool_input_validation.py
mcp-audit/tests/: test_command_injection.py  test_command_injection_cross_function.py  test_command_injection_list_concat_safe.py  test_destructive_fs_sink.py  test_fastmcp_wrapper_layer.py  test_sql_readonly_keyword_guard.py  test_starlette_badhost.py  test_tool_input_validation.py
mcp-audit/tests/fixtures/bad_pep621/: pyproject.toml
mcp-audit/tests/fixtures/bad_poetry/: pyproject.toml
mcp-audit/tests/fixtures/bad_requirements/: requirements.txt
mcp-audit/tests/fixtures/bad_server/: server.py
mcp-audit/tests/fixtures/command_injection_bad/: server.py
mcp-audit/tests/fixtures/command_injection_cross_function/: server.py
mcp-audit/tests/fixtures/command_injection_good/: server.py
mcp-audit/tests/fixtures/command_injection_list_concat_safe/: server.py
mcp-audit/tests/fixtures/destructive_fs_bad/: server.py
mcp-audit/tests/fixtures/destructive_fs_guarded/: server.py
mcp-audit/tests/fixtures/destructive_fs_safe/: server.py
mcp-audit/tests/fixtures/good/: pyproject.toml
mcp-audit/tests/fixtures/good_server/: server.py
mcp-audit/tests/fixtures/loose_inputs/: server.py
mcp-audit/tests/fixtures/sql_readonly_bad/: server.py
mcp-audit/tests/fixtures/sql_readonly_good/: server.py
mcp-audit/tests/fixtures/tight_inputs/: server.py
mcp-content-opportunity/: .gitignore  README.md  pyproject.toml  smoke_test.py
mcp-content-opportunity/src/mcp_content_opportunity/: __init__.py  formatter.py  models.py  ranker.py  server.py
mcp-content-opportunity/src/mcp_content_opportunity/sources/: __init__.py  hackernews.py  reddit.py
mcp-content-opportunity/tests/: test_formatter.py  test_models.py  test_ranker.py  test_sources.py
mcp-gmail-reader/: .env.example  .gitignore  README.md  pyproject.toml
mcp-gmail-reader/src/mcp_gmail_reader/: __init__.py  client.py  config.py  models.py  parse.py  reader.py  server.py  writer.py
mcp-gmail-reader/tests/: conftest.py  test_client.py  test_config.py  test_parse.py  test_reader.py  test_writer.py
mcp-guardrails/: README.md  check_mcp_tool_async.py  lint_mcp_server.py  test_lint.py
mcp-guardrails/test_fixtures/: blocking_sleep.py  buggy_server.py  missing_docstring.py  untyped_params.py
mcp-sqlite-query/: .gitignore  README.md  pyproject.toml
mcp-sqlite-query/src/mcp_sqlite_query/: __init__.py  db.py  introspect.py  query.py  server.py
mcp-sqlite-query/tests/: conftest.py  test_db.py  test_introspect.py  test_query.py
sample-audit/: self_audit.html  self_audit.md
sample-audit/drop-in/: .mcp.json  CLAUDE.md  README.md  settings.json
sample-audit/drop-in/commands/: smoke.md  test.md
sample-audit/drop-in/hooks/: block_secrets.py  log_bash.py
