[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "mcp-audit"
version = "0.4.0"
description = "Static security + correctness audit for MCP server repos. Ships four checks; v0.4 extends command_injection with same-file cross-function taint propagation (catches tool -> helper -> sink flows that v0.3's single-function walker missed)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "audit", "security", "static-analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
mcp-audit = "mcp_audit.cli:main"

[project.urls]
Homepage = "https://mcpdone.com"
Repository = "https://github.com/Alienbushman/mcpdone-samples"
Issues = "https://github.com/Alienbushman/mcpdone-samples/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_audit"]
