[project]
name = "mcp-content-opportunity"
version = "0.1.0"
description = "MCP server that finds content opportunities by ranking HN and Reddit discussions."
readme = "README.md"
authors = [
    { name = "Alienbushman", email = "31990027+Alienbushman@users.noreply.github.com" }
]
requires-python = ">=3.11"
license = "MIT"
keywords = ["mcp", "content", "hackernews", "reddit", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.0",
]

[project.scripts]
mcp-content-opportunity = "mcp_content_opportunity.server:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
